# lume-word_of_day-sidecar

./: Cargo.toml  README.md
src/: lib.rs  main.rs
